# page-turn-decipher

./: Dockerfile  README.md  app.py  appspec.yml  docker-compose.yml  pyproject.toml  requirements.txt
page_turn_decipher/: router.py
page_turn_decipher/__tests__/: test_router.py
page_turn_decipher/utils/: clean_text.py  stopwords.py
scripts/: install_dependencies.sh  start_server.sh
static/: model.pkl
