[tool.poetry]
name = "page-turn-decipher"
version = "0.1.0"
description = "Classify news articles into real or fake"
authors = ["Sam Gorinsky <sgorinsky@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
waitress = "^2.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
