[tool.poetry]
name = "page-turn-decipher"
version = "0.1.0"
description = "Classify news articles into real or fake"
authors = ["Sam Gorinsky <sgorinsky@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
waitress = "^2.1.1"
numpy = "^1.22.4"
spacy = "^3.3.0"
pandas = "^1.4.2"
nltk = "^3.7"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
